- Change sidebar to dropdown menu, fix some content

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,79 +4,96 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/LICENSE)
  */
 body {
-  overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 @font-face {
-  font-family: "KFGQPCUthmanTahaNaskh";
-  src: url("font/KFGQPCUthmanTahaNaskh.eot?#iefix") format("embedded-opentype"), url("font/KFGQPCUthmanTahaNaskh.woff") format("woff"), url("font/KFGQPCUthmanTahaNaskh.ttf") format("truetype"),
-    url("font/KFGQPCUthmanTahaNaskh.svg#KFGQPCUthmanTahaNaskh") format("svg");
-  font-weight: normal;
-  font-style: normal;
+    font-family: "KFGQPCUthmanTahaNaskh";
+    src: url("font/KFGQPCUthmanTahaNaskh.eot?#iefix") format("embedded-opentype"), url("font/KFGQPCUthmanTahaNaskh.woff") format("woff"), url("font/KFGQPCUthmanTahaNaskh.ttf") format("truetype"),
+        url("font/KFGQPCUthmanTahaNaskh.svg#KFGQPCUthmanTahaNaskh") format("svg");
+    font-weight: normal;
+    font-style: normal;
 }
 
 #sidebar-wrapper {
-  min-height: 100vh;
-  margin-left: -15rem;
-  -webkit-transition: margin 0.25s ease-out;
-  -moz-transition: margin 0.25s ease-out;
-  -o-transition: margin 0.25s ease-out;
-  transition: margin 0.25s ease-out;
+    min-height: 100vh;
+    margin-left: -15rem;
+    -webkit-transition: margin 0.25s ease-out;
+    -moz-transition: margin 0.25s ease-out;
+    -o-transition: margin 0.25s ease-out;
+    transition: margin 0.25s ease-out;
 }
 
 #sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
-  font-size: 1.2rem;
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
 }
 
 #sidebar-wrapper .list-group {
-  width: 15rem;
+    width: 15rem;
 }
 
 #page-content-wrapper {
-  min-width: 100vw;
+    min-width: 100vw;
 }
 
 #wrapper.toggled #sidebar-wrapper {
-  margin-left: 0;
+    margin-left: 0;
 }
 
 @media (min-width: 768px) {
-  #sidebar-wrapper {
-    margin-left: 0;
-  }
+    #sidebar-wrapper {
+        margin-left: 0;
+    }
 
-  #page-content-wrapper {
-    min-width: 0;
-    width: 100%;
-  }
+    #page-content-wrapper {
+        min-width: 0;
+        width: 100%;
+    }
 
-  #wrapper.toggled #sidebar-wrapper {
-    margin-left: -15rem;
-  }
+    #wrapper.toggled #sidebar-wrapper {
+        margin-left: -15rem;
+    }
 }
 
-.hadist{
+.hadist {
     margin: 20px;
 }
 
-.arabic{
+.arabic {
     font-family: KFGQPCUthmanTahaNaskh;
     text-align: right;
 }
 
 .matan {
-  font-size: 2rem;
+    font-size: 2rem;
 }
 
-.meaning{
+.meaning {
     text-align: justify;
 }
 
-.sanad{
+.sanad {
     font-size: 1.5em;
 }
 
-.rawi{
+.rawi {
     font-size: 1.5em;
+}
+
+.dropdown-menu {
+    max-height: 400px;
+    overflow-y: auto;
+}
+
+body {
+    min-height: 75rem;
+    padding-top: 4.5rem;
+}
+
+:target::before {
+    content: "";
+    display: block;
+    height: 60px; /* fixed header height*/
+    margin: -60px 0 0; /* negative fixed header height */
 }
